# pseudo-cyrillic

./: Cargo.toml  README.md
src/: lib.rs
